# dfx-mgr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Linux-Bringup-README.md  README.md  build.sh
cmake/: collect.cmake  options.cmake
doc/: dfx-graph_api.md
example/: CMakeLists.txt
example/sys/generic/: CMakeLists.txt  accel-config.h.in  accel-config.s  accel-pr.c  lscript.ld
example/sys/linux/: CMakeLists.txt  acap.c  acap_daemon.c  accel-aes.c  accel-bzip2.c  accel-container.c  accel-shm.c  accel.json  dfx-mgr-client.c  dfx-mgrd.c  dfx-mgrd2.c  graphTest6.c  load_accel.c  rm.json  shell.json
example/sys/linux/graph/: CMakeLists.txt  graphApp.c  graphDaemon.c  graphTest0.c  graphTest1.c  graphTest2.c  graphTest3.c  graphTest4.c  graphTest5.c  graphTest6.c
include/: libfpga.h  lws_config.h  zynq_ioctl.h
lib/: libwebsockets.so.17
opendfx-graph/: CMakeLists.txt  README.md  build.sh
opendfx-graph/drivers/: CMakeLists.txt
opendfx-graph/drivers/AIEXrtDma/: CMakeLists.txt  build.sh
opendfx-graph/drivers/AIEXrtDma/src/: CMakeLists.txt  aie.c  aieMatMul.cpp  aieMatMul.h  aie_control_xrt.cpp  kernels.h  xgemm.h
opendfx-graph/drivers/AIEXrtDma/src/kernels/: config.h  one_input.cc  one_output.cc  two_inputs.cc
opendfx-graph/drivers/XF2DFilter/: CMakeLists.txt
opendfx-graph/drivers/XF2DFilter/src/: CMakeLists.txt  XF2DFilter.cpp  XF2DFilter.h  aie_control_xrt.cpp
opendfx-graph/drivers/XrtShimDma/src/: CMakeLists.txt
opendfx-graph/drivers/fallback/src/: CMakeLists.txt  fallback.c
opendfx-graph/drivers/sihaDma/src/: CMakeLists.txt  siha.c  siha.h
opendfx-graph/drivers/sihaXrtDma/src/: CMakeLists.txt  siha.c  sihaXrt.c  sihaXrt.h
opendfx-graph/drivers/softDma/src/: CMakeLists.txt  soft.c  soft.h
opendfx-graph/include/: CMakeLists.txt  accel.hpp  buffer.hpp  device.h  executionDependency.hpp  graph.hpp  graphManager.hpp  graph_api.h  link.hpp  utils.h  utils.hpp
opendfx-graph/src/: accel.cpp  buffer.cpp  executionDependency.cpp  graph.cpp  graphManager.cpp  graph_api.cpp  link.cpp  main.cpp  utils.cpp
opendfx-graph/test/: CMakeLists.txt  libdfx_app.c  testChainPri0.cpp  testChainPri1.cpp  testChainPri2.cpp  testGraph.cpp  testGraphAPI.c  testGraphAesPri0.cpp  testGraphAesPri1.cpp  testGraphAesPri2.cpp  testGraphClient.cpp  testGraphClient2.cpp  testGraphClientAie.cpp  testGraphClientChain.cpp  testGraphClientFilter.cpp  testGraphClientNoAccel.cpp  testGraphManager.cpp  testJson.cpp  testJsonAPI.c
snap/: snapcraft.yaml
snap/hooks/: configure
src/: CMakeLists.txt  acapd.sh  acapdwebsoc.c  acapdwebsoc.h  accel.c  accel.h  assert.c  assert.h  client_helper.c  client_helper.h  conio.h  daemon.conf  daemon_helper.c  daemon_helper.h  device.c  device.h  dfx-mgr-fw-load.service  dfx-mgr.service  dfx-mgr.sh  dfxmgr_client.c  dfxmgr_client.h  dma.c  dma.h  eeprom.c  eeprom.h  helper.h  json-config.h  lws_client.c  lws_client.h  model.h  print.h  rpu.c  rpu.h  rpu_helper.c  rpu_helper.h  shell.c  shell.h  shm.c  shm.h  user_load.c  (+1 more)
src/scripts/: dfx-mgr-management-script.sh  dfx-mgrd-snap-wrapper.sh  xlnx-firmware-detect  xlnx-firmware-load
src/sys/generic/: CMakeLists.txt  accel.c  accel.h  device.c  dma-axidma.c  dma.h  generic-device.h  json-config.c  json-config.h  print.c  shell.c  shm.c
src/sys/linux/: CMakeLists.txt  acapd-vfio-common.c  acapd-vfio-common.h  accel.c  accel.h  device.c  dma-axidma-vfio.c  dma-mcdma-vfio.c  dma-vfio-common.c  dma-vfio-common.h  dma.c  dma.h  generic-device.c  generic-device.h  json-config.c  json-config.h  print.c  shell.c  shm.c
src/sys/linux/graph/: CMakeLists.txt  Makefile  abstractGraph.c  abstractGraph.h  aes128.c  aes128.h  aes192.c  aes192.h  aes192Fallback.c  aes192Fallback.h  aesFallback.c  aesFallback.h  graph.c  graph.h  graphClient.c  graphClient.h  graphServer.c  graphServer.h  jobScheduler.c  jobScheduler.h  main.c  metadata.c  metadata.h  scheduler.c  scheduler.h  schedulerBypass.c  schedulerBypass.h
src/sys/linux/graph/layer0/: CMakeLists.txt  Makefile  debug.h  dfx-mgrd.c  dfx-mgrd.h  dm.h  nodebug.h  queue.c  queue.h  shellDriver.c  shellDriver.h  siha.c  siha.h  slotManager.c  slotManager.h  uio.c  uio.h  uiomap.h  utils.c  utils.h  xrtbuffer.c  xrtbuffer.h
src/sys/linux/graph/layer0/fallback/: CMakeLists.txt  Makefile  fallback.c  fallback.h
src/sys/linux/graph/layer0/sihaHLS/: CMakeLists.txt  Makefile  sihaHLSdm.c  sihaHLSdm.h  sihaHLSdm1.h  sihaHLSdmlib.h
src/sys/linux/graph/layer0/softIO/: CMakeLists.txt  Makefile  softdm.c  softdm.h
