file(GLOB SOURCES_CPP *.cpp)

add_executable(testGraph testGraph.cpp)
add_executable(testGraphAPI testGraphAPI.c)
add_executable(testJson testJson.cpp)
add_executable(testJsonAPI testJsonAPI.c)
add_executable(testGraphManager testGraphManager.cpp)
add_executable(testGraphClient testGraphClient.cpp)
add_executable(testGraphClientChain testGraphClientChain.cpp)
add_executable(testGraphClientAie testGraphClientAie.cpp)
add_executable(testGraphClientNoAccel testGraphClientNoAccel.cpp)
add_executable(testChainPri0 testChainPri0.cpp)
add_executable(testChainPri1 testChainPri1.cpp)
add_executable(testChainPri2 testChainPri2.cpp)
add_executable(testGraphAesPri0 testGraphAesPri0.cpp)
add_executable(testGraphAesPri1 testGraphAesPri1.cpp)
add_executable(testGraphAesPri2 testGraphAesPri2.cpp)

target_link_libraries(testGraph dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testGraphAPI dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testJson dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testJsonAPI dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testGraphManager dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testGraphClient dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testGraphClientChain dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testGraphClientAie dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testGraphClientNoAccel dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testChainPri0 dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testChainPri1 dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testChainPri2 dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testGraphAesPri0 dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testGraphAesPri1 dfx-mgr-shared dfxgraph dl pthread)
target_link_libraries(testGraphAesPri2 dfx-mgr-shared dfxgraph dl pthread)

