add_subdirectory (layer0)
collect (PROJECT_LIB_HEADERS abstractGraph.h)
collect (PROJECT_LIB_HEADERS graph.h)
collect (PROJECT_LIB_HEADERS graphClient.h)
collect (PROJECT_LIB_HEADERS graphServer.h)
collect (PROJECT_LIB_HEADERS metadata.h)
collect (PROJECT_LIB_HEADERS scheduler.h)
#collect (PROJECT_LIB_HEADERS schedulerBypass.h)

collect (PROJECT_LIB_SOURCES abstractGraph.c)
collect (PROJECT_LIB_SOURCES graph.c)
collect (PROJECT_LIB_SOURCES graphClient.c)
collect (PROJECT_LIB_SOURCES graphServer.c)
collect (PROJECT_LIB_SOURCES metadata.c)
#collect (PROJECT_LIB_SOURCES main.c)
collect (PROJECT_LIB_SOURCES scheduler.c)
#collect (PROJECT_LIB_SOURCES schedulerBypass.c)


